add upload files service

--- a/.env
+++ b/.env
@@ -40,5 +40,10 @@ DATABASE_URL="mysql://root:password@127.0.0.1:3306/main?serverVersion=8"
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
