--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "symfonycasts/reset-password-bundle": "^1.16",
         "symfonycasts/verify-email-bundle": "^1.12",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/string-extra": "^3.4",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
