--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -32,3 +32,14 @@ liip_imagine:
         # create a thumbnail: set size to 200x200 and use the "outbound" mode
         # to crop the image when the size ratio of the input differs
         thumbnail: { size: [200, 200], mode: outbound }
+    # the name of the "filter set"
+
+    avatar_thumb_small:
+      # adjust the image quality to 75%
+      quality: 75
+
+      # list of transformations to apply (the "filters")
+      filters:
+        # create a thumbnail: set size to 100x100 and use the "outbound" mode
+        # to crop the image when the size ratio of the input differs
+        thumbnail: { size: [75, 75], mode: outbound }
