--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,7 @@ security:
         # redirects unauthenticated visitors to the login_path when they try to access a secured place
         login_path: app_login
         check_path: app_login
+        default_target_path: app_user_dashboard
       logout:
         path: app_logout
       entry_point: App\Security\AuthenticationEntryPoint
@@ -36,6 +37,7 @@ security:
   # Note: Only the *first* access control that matches will be used
   access_control:
     - { path: ^/figure, roles: IS_AUTHENTICATED_FULLY }
+    - { path: ^/user, roles: IS_AUTHENTICATED_FULLY }
     # - { path: ^/profile, roles: ROLE_USER }
   access_denied_url: /
 
