--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
+        "symfony/debug-bundle": "6.1.*",
         "symfony/doctrine-messenger": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/expression-language": "6.1.*",
@@ -43,6 +44,7 @@
         "symfony/twig-bundle": "6.1.*",
         "symfony/validator": "6.1.*",
         "symfony/web-link": "6.1.*",
+        "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.1.*",
         "symfonycasts/reset-password-bundle": "^1.16",
         "symfonycasts/verify-email-bundle": "^1.12",
@@ -108,7 +110,6 @@
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
-        "symfony/debug-bundle": "6.1.*",
         "symfony/maker-bundle": "^1.47",
         "symfony/phpunit-bridge": "^6.1",
         "symfony/stopwatch": "6.1.*",
