--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,13 @@ jobs:
           private-ssh-key: ${{ secrets.SSH_KEY }}
           destination-path: ~/public_html/snowtricks/
           ssh-port: 65002
+          exclude: |
+            .env.local
+      - name: 🔨 Build Project
+        run: |
+          php -r "readfile('https://getcomposer.org/installer');" > composer-setup.php
+          php composer-setup.php
+          php composer.phar install
+          php composer.phar require symfony/apache-pack
+          php composer.phar dump-autoload
+          php bin/console cache:clear
