--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,5 @@ jobs:
           php bin/console cache:clear
 
       - name: Make envfile
-        uses: SpicyPizza/create-envfile@v1.3
-        with:
-          envkey_SECRET_KEY: ${{ secrets.local }}
-          file_name: .env.local
+        run: |
+          echo "Creating a new file." > .env.local
