--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,9 @@ jobs:
           php bin/console cache:clear
 
       - name: Make envfile
-        run: |
-          echo "${{ secrets.local }}" > .env
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_DEBUG: false
+          envkey_SOME_API_KEY: "123456abcdef"
+          envkey_SECRET_KEY: ${{ secrets.local }}
+          file_name: .env.local
