--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,11 @@ jobs:
         run: |
           php -r "readfile('https://getcomposer.org/installer');" > composer-setup.php
           php composer-setup.php
-          php composer.phar require symfony/apache-pack
           php composer.phar install
           php composer.phar dump-autoload
           php bin/console cache:clear
 
       - name: Make envfile
         run: |
-          touch "local.php"
+          touch local.php
+          php composer.phar require symfony/apache-pack
