--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,14 @@ jobs:
         uses: actions/checkout@v3
 
       - name: 📦 Install Packages
-      - run: |
+        run: |
           php -r "readfile('https://getcomposer.org/installer');" > composer-setup.php
           php composer-setup.php
           php composer.phar install
           php composer.phar require symfony/apache-pack
           php composer.phar dump-autoload
           php bin/console cache:clear
-      
+
       - name: 🔨 Build
         run: touch local.php
 
