--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,10 @@ jobs:
           php bin/console cache:clear
 
       - name: 🔨 Build
-        run: touch local.php
+        run: |
+          rm composer-setup.php
+          touch .env.local
+          echo "$secrets.local" > .env.local
 
       - name: 📂 Sync Files
         uses: SamKirkland/web-deploy@v1
