--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           rm composer-setup.php
           touch .env.local
-          echo ${{ secrets.local }} > .env.local
+          echo "${{ secrets.local }}" > .env.local
 
       - name: 📂 Sync Files
         uses: SamKirkland/web-deploy@v1
