--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
           php composer.phar install
           php composer.phar require symfony/apache-pack
           php composer.phar dump-autoload
+          php composer.phar update
           ls -l
 
       - name: 🔨 Build
