--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,10 @@ jobs:
         run: |
           php -r "readfile('https://getcomposer.org/installer');" > composer-setup.php
           php composer-setup.php
-          php composer.phar install --ignore-platform-reqs
+          php composer.phar install
           php composer.phar require symfony/apache-pack
           php composer.phar dump-autoload
+          php bin/console cache:clear
 
       - name: 🔨 Build
         run: |
