--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: 📦 Install Packages
-        run: |
-          php -v
-          php -r "readfile('https://getcomposer.org/installer');" > composer-setup.php
-          php composer-setup.php
-          php composer.phar install
-          php composer.phar require symfony/apache-pack
+        uses: php-actions/composer@v6
 
       - name: 🔨 Build
         run: |
-          rm composer-setup.php
           touch .env.local
           echo "${{ secrets.local }}" > .env.local
 
