--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
     "symfony/web-link": "6.1.*",
     "symfony/yaml": "6.1.*",
     "symfonycasts/reset-password-bundle": "^1.16",
-    "symfonycasts/verify-email-bundle": "^1.12",
+    "symfonycasts/verify-email-bundle": "1.11.0",
     "twig/extra-bundle": "^2.12|^3.0",
     "twig/string-extra": "^3.4",
     "twig/twig": "^2.12|^3.0"
